update wording