@@ -4,11 +4,10 @@ public class Warmup {
 
   public static void main(String[] args) throws Exception {
     // TODO: implement
-    // 1) run "java -version" using ProcessBuilder
-    //   don't forget to pass the command as a list: Arrays.asList("java", "-version")
-    // 2) inherit input/output
-    // 3) wait for the process to finish
-    // 4) make sure the java version is visible
+    // run "java -version" using ProcessBuilder, make sure the java version is visible
+    // 1) pass the command as a list: List.of("java", "-version")
+    // 2) inherit input/output, so the output will be visible: inheritIO()
+    // 3) wait for the process to finish: waitFor()
 
     // make sure to inherit input/output using inheritIO()
     // don't use Process#getInputStream in this task
